--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
-# Distribution / packaging
+# Distribution, packaging, PyInstaller
 .Python
 env/
 build/
@@ -24,17 +21,10 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.idea/
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
-# Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
+pip-delete*.txt
 
 # Unit test / coverage reports
 htmlcov/
@@ -46,72 +36,51 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
+.pytest_cache/
+docker-compose.y*ml
 
-# Translations
+# C extension, Translations
+*.so
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-scratchpaper.*
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# dotenv
-./.env
-.env
-
-# virtualenv
-.venv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-
-# datajoint
-dj_local_con*.json
-
-# emacs
+# editors: vscode, emacs, Mac
+.vscode
 **/*~
 **/#*#
 **/.#*
-
-docker-compose.y*ml
 .DS_Store
-*/temp*
+
+# Django, Flask, Scrapy, Sphinx, mkdocs:
+# PyBuilder, Jupyter, SageMath, celery beat
+*.log
+local_settings.py
+instance/
+.webassets-cache
+.scrapy
+scratchpaper.*
+docs/_build/
+/site
+target/
+.ipynb_checkpoints
+celerybeat-schedule
+*.sage.py
+
+# dotenv, virtualenv, pyenv, mypy
+./.env
+.venv
+venv/
+ENV/
+.python-version
+.mypy_cache/
+
+# Spyder/Rope project settings
+.spyderproject
+.spyproject
+.ropeproject
+
+# datajoint, notes, nwb export
+dj_local_c*.json
 temp*
+temp/*
+*nwb
