--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
 datajoint>=0.13.0
+element-lab==0.1.0b0
+element-animal==0.1.0b0
+element-session==0.1.0b0
+element-interface @ git+https://github.com/datajoint/element-interface.git
+ipykernel==6.0.1
