--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ datajoint>=0.13.0
 element-lab==0.1.0b0
 element-animal==0.1.0b0
 element-session==0.1.0b0
+element-behavior==0.0.0a1
 element-interface @ git+https://github.com/datajoint/element-interface.git
 ipykernel==6.0.1
