--- a/.github/workflows/u24_element_build_release_call.yaml
+++ b/.github/workflows/u24_element_build_release_call.yaml
@@ -1,14 +1,14 @@
-name: Development
+name: u24_element_build_release_call
 on:
   pull_request:
   push:
     tags:
       - '*.*.*'
   workflow_dispatch:
-  
+
 jobs:
   call_u24_elements_pypi_alpine:
-    uses: dj-sciops/djsciops-cicd/.github/workflows/u24_elements.yaml@main
+    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_build_release.yaml@main
     with:
       py_ver: 3.9
       dist: alpine
