fix(CICD): 🐛 fix DISTRO to DIST

--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -9,7 +9,7 @@ services:
       context: .
       args:
         - PY_VER
-        - DISTRO
+        - DIST
         - IMAGE
         - PKG_NAME
         - PKG_VERSION
