feat(CICD): ✨ include debian image build

--- a/.github/workflows/u24_element_build_release_call.yaml
+++ b/.github/workflows/u24_element_build_release_call.yaml
@@ -11,3 +11,9 @@ jobs:
       py_ver: 3.9
       dist: alpine
       image: djbase
+  call_u24_elements_pypi_debian:
+    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_build_release.yaml@main
+    with:
+      py_ver: 3.9
+      dist: debian
+      image: djbase
