fix(CICD): 🐛 have to pass secrets in

--- a/.github/workflows/u24_element_build_release_call.yaml
+++ b/.github/workflows/u24_element_build_release_call.yaml
@@ -10,3 +10,6 @@ jobs:
     with:
       py_ver: 3.9
       image: djbase
+    secrets:
+      TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
+      TWINE_PASSWORD: ${{secrets.TWINE_PASSWORD}}
