--- a/.github/workflows/u24_element_build_release_call.yaml
+++ b/.github/workflows/u24_element_build_release_call.yaml
@@ -5,7 +5,19 @@ on:
   workflow_dispatch:
 
 jobs:
+  test_call_u24_elements_build_release_alpine:
+    if: startsWith(github.ref, 'refs/tags') != true
+    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_build_release.yaml@main
+    with:
+      py_ver: 3.9
+      image: djbase
+    secrets:
+      TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
+      TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   call_u24_elements_build_release_alpine:
+    if: |
+      github.event_name == 'push' &&
+      startsWith(github.ref, 'refs/tags')
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_build_release.yaml@main
     with:
       py_ver: 3.9
