--- a/.github/workflows/u24_element_test_release_call.yaml
+++ b/.github/workflows/u24_element_test_release_call.yaml
@@ -5,9 +5,7 @@ on:
     - completed
 jobs:
   test_call_u24_elements_test_release_alpine:
-    if: |
-      github.event.workflow_run.conclusion == 'success' &&
-      ( startsWith(github.ref, 'refs/tags/test') || github.event.workflow_run.event == 'pull_request')
+    if: "github.event.workflow_run.conclusion == 'success' &&\n( startsWith(github.ref, 'refs/tags/test') || \n  github.event.workflow_run.event == 'pull_request')\n"
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_test_release.yaml@main
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
