--- a/.github/.staging_workflows/anchored_u24_element_test_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_test_release_call.yaml
@@ -1,9 +1,10 @@
 name: u24_element_test_release_call
 
 on:
-  workflow_run: ["u24_element_build_call"]
-  types: 
-    - completed
+  workflow_run:
+    workflows: ["u24_element_build_call"]
+    types:
+      - completed
 
 anchor-dev-test-release-call: &dev-test-release-call
   uses: yambottle/djsciops-cicd/.github/workflows/u24_element_test_release.yaml@main
