--- a/.github/workflows/u24_element_test_release_call.yaml
+++ b/.github/workflows/u24_element_test_release_call.yaml
@@ -1,8 +1,9 @@
 name: u24_element_test_release_call
 on:
-  workflow_run: ["u24_element_build_call"]
-  types:
-    - completed
+  workflow_run:
+    workflows: ["u24_element_build_call"]
+    types:
+      - completed
 jobs:
   test_call_u24_elements_test_release_alpine:
     if: "github.event.workflow_run.conclusion == 'success' &&\n( startsWith(github.ref, 'refs/tags/test') || \n  github.event.workflow_run.event == 'pull_request')\n"
