--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,6 @@ exclude = notebooks
 
 [tool:pytest]
 minversion = 6.2
-addopts = -sv -p no:warnings
-# addopts = -sv --cov-report term-missing --cov=element-deeplabcut -p no:warnings tests/
+# addopts = -sv -p no:warnings
+addopts = -sv --cov-report term-missing --cov=element_deeplabcut -p no:warnings
 testpaths = tests
