fix(CICD): 🐛 simplify logic

--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -1,4 +1,4 @@
-name: u24_element_test_release_call
+name: u24_element_release_call
 
 on:
   workflow_run:
@@ -6,32 +6,37 @@ on:
     types:
       - completed
 
-anchor-dev-test-release-call: &dev-test-release-call
+anchor-dev-release-call: &dev-release-call
   uses: yambottle/djsciops-cicd/.github/workflows/u24_element_test_release.yaml@main
 
-anchor-test-test-release-call: &test-test-release-call
+anchor-test-release-call: &test-release-call
   uses: yambottle/djsciops-cicd/.github/workflows/u24_element_test_release.yaml@main
 
-anchor-prod-test-release-call: &prod-test-release-call
+anchor-prod-release-call: &prod-release-call
   uses: dj-sciops/djsciops-cicd/.github/workflows/u24_element_test_release.yaml@main
 
 jobs:
-  test_call_u24_elements_test_release_alpine:
+  test_call_u24_elements_release_alpine:
     if: |
       github.event.workflow_run.conclusion == 'success' &&
       ( startsWith(github.ref, 'refs/tags/test') || 
         github.event.workflow_run.event == 'pull_request')
-    !!merge <<: *$STAGE-test-release-call
+    !!merge <<: *$STAGE-release-call
+    inputs:
+      TWINE_REPO: testpypi
+      DRAFT_RELEASE: true
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   
-  call_u24_elements_test_release_alpine:
+  call_u24_elements_release_alpine:
     if: |
       github.event.workflow_run.conclusion == 'success' &&
       startsWith(github.ref, 'refs/tags') &&
       startsWith(github.ref, 'refs/tags/test') != true
-    !!merge <<: *$STAGE-test-release-call
+    !!merge <<: *$STAGE-release-call
+    inputs:
+      DRAFT_RELEASE: false
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
       TWINE_PASSWORD: ${{secrets.TWINE_PASSWORD}}
