--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -22,7 +22,7 @@ jobs:
       ( startsWith(github.ref, 'refs/tags/test') || 
         github.event.workflow_run.event == 'pull_request')
     !!merge <<: *$STAGE-release-call
-    inputs:
+    with:
       TWINE_REPO: testpypi
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
