--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -8,7 +8,7 @@ jobs:
   test_call_u24_elements_release_alpine:
     if: "github.event.workflow_run.conclusion == 'success' &&\n( startsWith(github.ref, 'refs/tags/test') || \n  github.event.workflow_run.event == 'pull_request')\n"
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
-    inputs:
+    with:
       TWINE_REPO: testpypi
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
