--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -19,7 +19,7 @@ jobs:
   test_call_u24_elements_release_alpine:
     if: >
       ${{ github.event.workflow_run.conclusion == 'success' &&
-          ( startsWith(github.ref, 'refs/tags/test') || 
+          ( contains(github.ref, 'test') || 
             github.event.workflow_run.event == 'pull_request') }}
     !!merge <<: *$STAGE-release-call
     with:
@@ -32,7 +32,7 @@ jobs:
     if: >
       ${{ github.event.workflow_run.conclusion == 'success' &&
           startsWith(github.ref, 'refs/tags') &&
-          !startsWith(github.ref, 'refs/tags/test')}}
+          !contains(github.ref, 'test')}}
     !!merge <<: *$STAGE-release-call
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
