--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -6,7 +6,7 @@ on:
       - completed
 jobs:
   test_call_u24_elements_release_alpine:
-    if: "${{ github.event.workflow_run.conclusion == 'success' &&\n    ( startsWith(github.ref, 'refs/tags/test') || \n      github.event.workflow_run.event == 'pull_request') }}\n"
+    if: "${{ github.event.workflow_run.conclusion == 'success' &&\n    ( contains(github.ref, 'test') || \n      github.event.workflow_run.event == 'pull_request') }}\n"
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
       TWINE_REPO: testpypi
@@ -18,7 +18,7 @@ jobs:
       ${{ github.event.workflow_run.conclusion == 'success' &&
 
           startsWith(github.ref, 'refs/tags') &&
-          !startsWith(github.ref, 'refs/tags/test')}}
+          !contains(github.ref, 'test')}}
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
