--- a/.github/workflows/u24_element_build_call.yaml
+++ b/.github/workflows/u24_element_build_call.yaml
@@ -10,6 +10,7 @@ jobs:
   #     py_ver: 3.9
   #     image: djbase
   skip_build:
+    runs-on: ubuntu-latest
     steps:
       - name: Skip build
         run: |-
