--- a/.github/.staging_workflows/anchored_u24_element_build_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_build_call.yaml
@@ -21,6 +21,7 @@ jobs:
   #     py_ver: 3.9
   #     image: djbase
   skip_build:
+    runs-on: ubuntu-latest
     steps:
       - name: Skip build
         run: |
