--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -17,10 +17,7 @@ anchor-prod-release-call: &prod-release-call
 
 jobs:
   test_call_u24_elements_release_alpine:
-    if: >
-      ${{ github.event.workflow_run.conclusion == 'success' &&
-          ( contains(github.ref, 'test') || 
-            github.event.workflow_run.event == 'pull_request') }}
+    if:  ${{ github.event.workflow_run.conclusion == 'success' && ( contains(github.ref, 'test') || github.event.workflow_run.event == 'pull_request') }}
     !!merge <<: *$STAGE-release-call
     with:
       TWINE_REPO: testpypi
@@ -29,10 +26,7 @@ jobs:
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   
   call_u24_elements_release_alpine:
-    if: >
-      ${{ github.event.workflow_run.conclusion == 'success' &&
-          startsWith(github.ref, 'refs/tags') &&
-          !contains(github.ref, 'test')}}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags') && !contains(github.ref, 'test') }}
     !!merge <<: *$STAGE-release-call
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
