--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -5,7 +5,16 @@ on:
     types:
       - completed
 jobs:
+  condition_check:
+    runs_on: ubuntu
+    steps:
+      - name: condition_check
+        run: |
+          echo ${{github.event.workflow_run.conclusion}}
+          echo ${{github.ref}}
+          echo ${{github.event.workflow_run.event}}
   test_call_u24_elements_release_alpine:
+    if: ${{ (github.event.workflow_run.conclusion == 'success') && ( contains(github.ref, 'test') || (github.event.workflow_run.event == 'pull_request')) }}
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
       TWINE_REPO: testpypi
