--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -17,7 +17,7 @@ anchor-prod-release-call: &prod-release-call
 
 jobs:
   condition_check:
-    runs_on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: condition_check
         run: |
