--- a/.github/workflows/u24_element_build_call.yaml
+++ b/.github/workflows/u24_element_build_call.yaml
@@ -15,3 +15,5 @@ jobs:
       - name: Skip build
         run: |-
           echo "Build finished"
+          echo ${{github.ref}}
+          echo ${{github.event.workflow_run.event}}
