--- a/.github/.staging_workflows/anchored_u24_element_build_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_build_call.yaml
@@ -26,3 +26,5 @@ jobs:
       - name: Skip build
         run: |
           echo "Build finished"
+          echo ${{github.ref}}
+          echo ${{github.event.workflow_run.event}}
