--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -53,8 +53,9 @@ jobs:
           echo "GitHub SHA: $GITHUB_SHA"
   test_call_u24_elements_release_alpine:
     if: |
-      github.event.workflow_run.conclusion == 'success' && 
-      ( contains(github.event.workflow_run.head_branch, 'test') || (github.event.workflow_run.event == 'pull_request'))
+      ${{ github.event.workflow_run.conclusion == 'success' && 
+          ( contains(github.event.workflow_run.head_branch, 'test') || 
+            (github.event.workflow_run.event == 'pull_request')) }}
     !!merge <<: *$STAGE-release-call
     with:
       TWINE_REPO: testpypi
@@ -64,10 +65,10 @@ jobs:
   
   call_u24_elements_release_alpine:
     if: |
-      github.event.workflow_run.conclusion == 'success' &&
-      github.repository_owner == 'datajoint' &&
-      contains(github.event.workflow_run.head_branch != 'main') && 
-      !contains(github.event.workflow_run.head_branch, 'test')
+      ${{ github.event.workflow_run.conclusion == 'success' &&
+          github.repository_owner == 'datajoint' &&
+          contains(github.event.workflow_run.head_branch != 'main') && 
+          !contains(github.event.workflow_run.head_branch, 'test') }}
     !!merge <<: *$STAGE-release-call
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
