--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -67,7 +67,7 @@ jobs:
     if: |
       ${{ github.event.workflow_run.conclusion == 'success' &&
           github.repository_owner == 'datajoint' &&
-          contains(github.event.workflow_run.head_branch != 'main') && 
+          github.event.workflow_run.head_branch != 'main' && 
           !contains(github.event.workflow_run.head_branch, 'test') }}
     !!merge <<: *$STAGE-release-call
     secrets:
