--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -40,7 +40,8 @@ jobs:
           echo "The GitHub Actor's username is: $GITHUB_ACTOR"
           echo "GitHub SHA: $GITHUB_SHA"
   test_call_u24_elements_release_alpine:
-    if: "${{ github.event.workflow_run.conclusion == 'success' && \n    ( contains(github.event.workflow_run.head_branch, 'test') || \n      (github.event.workflow_run.event == 'pull_request')) }}\n"
+    if: >-
+      github.event.workflow_run.conclusion == 'success' && ( contains(github.event.workflow_run.head_branch, 'test') || (github.event.workflow_run.event == 'pull_request'))
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
       TWINE_REPO: testpypi
@@ -48,7 +49,8 @@ jobs:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   call_u24_elements_release_alpine:
-    if: "${{ github.event.workflow_run.conclusion == 'success' &&\n    github.repository_owner == 'datajoint' &&\n    github.event.workflow_run.head_branch != 'main' && \n    !contains(github.event.workflow_run.head_branch, 'test') }}\n"
+    if: >-
+      github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'datajoint' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
