--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -66,7 +66,7 @@ jobs:
   call_u24_elements_release_alpine:
     if: >-
       github.event.workflow_run.conclusion == 'success' &&
-      github.repository_owner == 'datajoint' &&
+      github.repository_owner == 'yambottle' &&
       github.event.workflow_run.head_branch != 'main' && 
       !contains(github.event.workflow_run.head_branch, 'test')
     !!merge <<: *$STAGE-release-call
