--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -50,7 +50,7 @@ jobs:
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   call_u24_elements_release_alpine:
     if: >-
-      github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'datajoint' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
+      github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'yambottle' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
