--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -12,7 +12,8 @@ jobs:
       github.event.workflow_run.conclusion == 'success' && ( contains(github.event.workflow_run.head_branch, 'test') || (github.event.workflow_run.event == 'pull_request'))
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
-      TWINE_REPO: testpypi
+      py_ver: 3.9
+      twine_repo: testpypi
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_TEST_USERNAME}}
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
@@ -20,6 +21,8 @@ jobs:
     if: >-
       github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'yambottle' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
     uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
+    with:
+      py_ver: 3.9
     secrets:
       TWINE_USERNAME: ${{secrets.TWINE_USERNAME}}
       TWINE_PASSWORD: ${{secrets.TWINE_PASSWORD}}
