--- a/.github/workflows/u24_element_build_release_call.yaml
+++ b/.github/workflows/u24_element_build_release_call.yaml
@@ -1,7 +1,7 @@
 name: u24_element_build_release_call
 on:
-  pull_request:
-  push:
+  # pull_request:
+  # push:
   workflow_dispatch:
 jobs:
   test_call_u24_elements_build_release_alpine:
