--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,10 @@
 max-line-length = 88
 exclude = notebooks
 
+[tool.black]
+line-length = 88
+exclude = \.env
+
 [tool:pytest]
 minversion = 6.2
 # addopts = -sv -p no:warnings
