--- a/.github/workflows/u24_element_release_call.yaml
+++ b/.github/workflows/u24_element_release_call.yaml
@@ -10,7 +10,7 @@ jobs:
   test_call_u24_elements_release_alpine:
     if: >-
       github.event.workflow_run.conclusion == 'success' && ( contains(github.event.workflow_run.head_branch, 'test') || (github.event.workflow_run.event == 'pull_request'))
-    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
+    uses: dj-sciops/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
       py_ver: 3.9
       twine_repo: testpypi
@@ -19,8 +19,8 @@ jobs:
       TWINE_PASSWORD: ${{secrets.TWINE_TEST_PASSWORD}}
   call_u24_elements_release_alpine:
     if: >-
-      github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'yambottle' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
-    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
+      github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'datajoint' && github.event.workflow_run.head_branch != 'main' &&  !contains(github.event.workflow_run.head_branch, 'test')
+    uses: dj-sciops/djsciops-cicd/.github/workflows/u24_element_release.yaml@main
     with:
       py_ver: 3.9
     secrets:
