--- a/.github/.staging_workflows/anchored_u24_element_release_call.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_release_call.yaml
@@ -2,7 +2,7 @@ name: u24_element_release_call
 
 on:
   workflow_run:
-    workflows: ["u24_element_build_call"]
+    workflows: ["u24_element_tag_to_release"]
     types:
       - completed
 
@@ -19,21 +19,18 @@ anchor-dev-release-if: &dev-release-if
   if: >-
     github.event.workflow_run.conclusion == 'success' &&
     github.repository_owner == 'yambottle' &&
-    github.event.workflow_run.head_branch != 'main' && 
     !contains(github.event.workflow_run.head_branch, 'test')
 
 anchor-test-release-if: &test-release-if
   if: >-
     github.event.workflow_run.conclusion == 'success' &&
     github.repository_owner == 'yambottle' &&
-    github.event.workflow_run.head_branch != 'main' && 
     !contains(github.event.workflow_run.head_branch, 'test')
 
 anchor-prod-release-if: &prod-release-if
   if: >-
     github.event.workflow_run.conclusion == 'success' &&
     github.repository_owner == 'datajoint' &&
-    github.event.workflow_run.head_branch != 'main' && 
     !contains(github.event.workflow_run.head_branch, 'test')
 
 jobs:
