--- a/.github/workflows/u24_element_before_release.yaml
+++ b/.github/workflows/u24_element_before_release.yaml
@@ -1,4 +1,4 @@
-name: u24_element_build_call
+name: u24_element_before_release
 on:
   pull_request:
   push:
@@ -7,7 +7,7 @@ jobs:
   call_context_check:
     uses: dj-sciops/djsciops-cicd/.github/workflows/context_check.yaml@main
   call_u24_elements_build_alpine:
-    uses: dj-sciops/djsciops-cicd/.github/workflows/u24_element_build.yaml@main
+    uses: yambottle/djsciops-cicd/.github/workflows/u24_element_build.yaml@main
     with:
       py_ver: 3.9
       image: djbase
