fix(CICD): 🐛 before_release workflow not triggerred by push with tag

--- a/.github/workflows/u24_element_before_release.yaml
+++ b/.github/workflows/u24_element_before_release.yaml
@@ -2,6 +2,8 @@ name: u24_element_before_release
 on:
   pull_request:
   push:
+    tags-ignore:
+      - '**'
   workflow_dispatch:
 jobs:
   call_context_check:
