--- a/.github/.staging_workflows/anchored_u24_element_before_release.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_before_release.yaml
@@ -3,6 +3,8 @@ name: u24_element_before_release
 on:
   pull_request:
   push:
+    tags-ignore:
+      - '**'
   workflow_dispatch:
 
 anchor-dev-build-call: &dev-build-call
