--- a/.github/.staging_workflows/anchored_u24_element_before_release.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_before_release.yaml
@@ -4,7 +4,8 @@ on:
   pull_request:
   push:
     tags-ignore:
-      - '**'
+      - '*.*.*'
+      - 'test*.*.*'
   workflow_dispatch:
 
 anchor-dev-build-call: &dev-build-call
