--- a/.github/.staging_workflows/anchored_u24_element_before_release.yaml
+++ b/.github/.staging_workflows/anchored_u24_element_before_release.yaml
@@ -1,8 +1,11 @@
-name: u24_element_before
+name: u24_element_before_release
 
 on:
   pull_request:
   push:
+    tags-ignore:
+      - '*.*.*'
+      - 'test*.*.*'
   workflow_dispatch:
 
 anchor-dev-build-call: &dev-build-call
