--- a/.github/workflows/u24_element_before_release.yaml
+++ b/.github/workflows/u24_element_before_release.yaml
@@ -1,7 +1,10 @@
-name: u24_element_before
+name: u24_element_before_release
 on:
   pull_request:
   push:
+    tags-ignore:
+      - '*.*.*'
+      - 'test*.*.*'
   workflow_dispatch:
 jobs:
   call_context_check:
